--- a/roles/openshift-applier/roles/openshift-applier/tasks/pre-check.yml
+++ b/roles/openshift-applier/roles/openshift-applier/tasks/pre-check.yml
@@ -15,17 +15,17 @@
 
     # Block to handle oc command output
     # - only proceed if the oc command returned any output
-    - block:
+    #    - block:
 
-        - name: "Filter out just the oc version number"
-          set_fact:
-            oc_version: "{{ (oc_vers_check.stdout | regex_search('^oc.+v([\\d.]+).*', '\\1'))[0] }}"
+#        - name: "Filter out just the oc version number"
+#          set_fact:
+#            oc_version: "{{ (oc_vers_check.stdout | regex_search('^oc.+v([\\d.]+).*', '\\1'))[0] }}"
 
-        - name: "Do *not* use the 'ignore_unknown_parameters' flag if 'oc' version is older than 3.7"
-          set_fact:
-            oc_ignore_unknown_parameters: false
-          when:
-            - oc_version is version('3.7','<')
+      #        - name: "Do *not* use the 'ignore_unknown_parameters' flag if 'oc' version is older than 3.7"
+      #    set_fact:
+      #      oc_ignore_unknown_parameters: false
+      #    when:
+      #      - oc_version is version('3.7','<')
 
       when:
         - oc_vers_check is defined
