--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -5,18 +5,28 @@ openshift_cluster_content:
 - object: projects
   content:
     - name: dev
-      template: "{{ inventory_dir }}/../templates/project/projectrequest-template.yml"
-      params: "{{ inventory_dir }}/../params/devops/project"
+      template: "{{ inventory_dir }}/../templates/projectrequest-template.yml"
+      params: "{{ inventory_dir }}/../params/devops/project.ini"
       action: create
       ignore_unknown_parameters: false
       tags:
       - projectrequests
-      - projectrequests-dev 
-- object: devops-tools
+      - projectrequests-dev
+- object: gogs
   content:
-    - name: devops-tools
-      template: "{{ inventory_dir }}/../templates/cicd-template.yml"
-      params: "{{ inventory_dir }}/../params/devops/cicd"
+    - name: gogs
+      template: "{{ inventory_dir }}/../templates/gogs-template.yml"
+      params: "{{ inventory_dir }}/../params/devops/gogs.ini"
       namespace: "devops"
       tags:
       - devops
+      - gogs
+- object: nexus
+  content:
+    - name: nexus
+      template: "{{ inventory_dir }}/../templates/nexus-template.yml"
+      params: "{{ inventory_dir }}/../params/devops/nexus.ini"
+      namespace: "devops"
+      tags:
+      - devops
+      - nexus
